# py_ambiguous

./: .editorconfig  CHANGES.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: pypi.yml  python.yml
ambiguous/: __init__.py  ambiguous.py  decorator.py  inspector.py  ops.py  selfish.py  thing_or_things.py
tests/: AmbiguousObjectTest.py  AmbiguousTest.py  DecoratorIsClassTest.py  DecoratorIsSelfTest.py  DecoratorTest.py  InspectorTest.py  IsClassTest.py  IsSelfTest.py  SelfishTest.py  Test.py  ThingOrThingsTest.py  test_ambiguous.py  test_ambiguous_object.py  test_decorator.py  test_thing_or_things.py
