[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiguous"
authors = [{name = "Daniel Pepper"}]
dynamic = ["version"]
description = "flexibility when you need it"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  'License :: OSI Approved :: MIT License',
  'Topic :: Utilities',
]
requires-python = ">= 3"

[project.urls]
Homepage = "https://github.com/dpep/py_ambiguous"

[tool.setuptools]
packages = ["ambiguous"]

[tool.setuptools.dynamic]
version = {attr = "ambiguous.__version__"}
