[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiguous"
authors = [{name = "Daniel Pepper"}]
dynamic = ["version"]
description = "flexibility when you need it"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  'Topic :: Utilities',
]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/dpep/py_ambiguous"

[tool.setuptools]
packages = ["ambiguous"]

[tool.setuptools.dynamic]
version = {attr = "ambiguous.__version__"}
